Fixed degree symbol spacing due to font issues, may have fixed function time events as well

--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,11 @@ main {
 	text-align: center;
 }
 
+.tempBox {
+	width: 200px;
+	display: inline-flex;
+}
+
 .subInfo {
 	width: 490px;
 }
@@ -176,3 +181,5 @@ footer {
 	color: rgb(223, 180, 39);
 	font-size: 50px;
 	margin-left: -25px;
+}
+
